--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- For Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#302b63">
+  <!-- For Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#302b63">
+  <!-- For iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#302b63">
   <title>ROS - Coming Soon</title>
   <link rel="icon" href="ROS_Fav_Icon.svg" type="image/svg+xml">
 
