--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>ROS - Coming Soon</title>
   <link rel="icon" href="ROS_Fav_Icon.svg" type="image/svg+xml">
+  <link rel="manifest" href="/manifest.json">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <style>
