--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <div style="font-size: 1.15rem; font-weight: 600; margin-bottom: 0.7rem; color: #ffb347; letter-spacing: 0.5px;">
       Look what we just dropped<span class="animated-dots"></span>
     </div>
-    <div>
+    <div style="display: flex; justify-content: center; gap: 1rem;">
       <a href="https://info.republicofsabjiwala.com" 
        title="Republic of Sabjiwala" 
        target="_blank" 
@@ -187,6 +187,19 @@
        
        />
       </a>
+
+      <a href="https://forms.gle/Q9SGhLqKNc7gmCe88" 
+      title="ROS Vendor Form" 
+      target="_blank" 
+      rel="noopener noreferrer" 
+      style="max-width: 32px; display: inline-flex; align-items: center; gap: 0.6rem; text-decoration: none;">
+      <img src="ROS_VendorForm.png" 
+      alt="ROS Vendor Form" 
+      style="height: 32px; width: auto; display: block;"
+      class="ros-animated-icon"
+      />
+    </a>
+
     </div>
     <style>
       .ros-animated-icon {
