--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           margin-top: 12.563rem;
           margin-bottom: 0.875rem;
           padding-left: 0.938rem;
-          padding-right: 0.375;
+          padding-right: 0.375rem;
           min-width: 17.438rem;
           min-height: 8.125rem;
           display: flex;
