fixing desktop view on mobile v1

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="viewportHeight" style="min-height: 100vh">
+    <div class="viewportHeight" style="min-height: 100vh; display: flex; flex-direction: column; justify-content: space-between;">
       <div
         class="logo"
         style="
