--- a/index.html
+++ b/index.html
@@ -24,36 +24,51 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="viewportHeight" style="min-height: 100vh; display: flex; flex-direction: column; justify-content: space-between;">
-      <div
-        class="logo"
-        style="
-          display: flex;
-          justify-content: flex-start;
-          max-width: 18.75rem;
-          padding: 0;
-          margin: 0;
-          align-items: center;
-        "
+    <div
+      class="viewportHeight"
+      style="
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      "
+    >
+      <a
+        href="https://info.republicofsabjiwala.com"
+        title="Republic of Sabjiwala"
+        target="_blank"
+        rel="noopener noreferrer"
+        style="text-decoration: none; color: inherit;"
       >
-        <img
-          src="./assets/Republic_of_Sabjiwala_logo.svg"
-          alt="Republic of Sabjiwala Logo"
-          style="display: block; width: 7.438rem; height: 1.524rem"
-        />
-      </div>
+        <div
+          class="logo"
+          style="
+            display: flex;
+            justify-content: flex-start;
+            min-width: 18.75rem;
+            padding: 0;
+            margin: 0;
+            align-items: center;
+          "
+        >
+          
+          <img
+            src="./assets/Republic_of_Sabjiwala_logo.svg"
+            alt="Republic of Sabjiwala Logo"
+            style=" width: 7.438rem; height: 1.524rem"
+          />
+        </div>
+      </a>
       <div class="" style="display: flex; justify-content: center">
         <img
           src="./assets/ROS_Got_this.svg"
           alt="ROS is saying, We got this!"
-          style="margin-top: 12.914rem; height: 5.875rem; width: 10.375rem"
+          style="height: 5.875rem; width: 10.375rem"
         />
       </div>
       <div
         class=""
         style="
-          margin-top: 12.563rem;
-          margin-bottom: 0.875rem;
           padding-left: 0.938rem;
           padding-right: 0.375rem;
           min-width: 17.438rem;
@@ -87,7 +102,7 @@
             title="ROS Vendor Form"
             target="_blank"
             rel="noopener noreferrer"
-            style="text-decoration: none; color: inherit"
+            style="text-decoration: none; color: inherit;"
           >
             <div
               style="
