--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div
       class="viewportHeight"
       style="
-        min-height: 100vh;
+        min-height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
