--- a/index.html
+++ b/index.html
@@ -33,39 +33,38 @@
         justify-content: space-between;
       "
     >
+      <div
+        class="logo"
+        style="
+          display: flex;
+          justify-content: flex-start;
+          min-width: 18.75rem;
+          padding: 0;
+          margin: 0;
+          align-items: center;
+        "
+      >
+        <img
+          src="./assets/Republic_of_Sabjiwala_logo.svg"
+          alt="Republic of Sabjiwala Logo"
+          style="width: 7.438rem; height: 1.524rem"
+        />
+      </div>
       <a
         href="https://info.republicofsabjiwala.com"
         title="Republic of Sabjiwala"
         target="_blank"
         rel="noopener noreferrer"
-        style="text-decoration: none; color: inherit;"
+        style="text-decoration: none; color: inherit"
       >
-        <div
-          class="logo"
-          style="
-            display: flex;
-            justify-content: flex-start;
-            min-width: 18.75rem;
-            padding: 0;
-            margin: 0;
-            align-items: center;
-          "
-        >
-          
+        <div class="" style="display: flex; justify-content: center">
           <img
-            src="./assets/Republic_of_Sabjiwala_logo.svg"
-            alt="Republic of Sabjiwala Logo"
-            style=" width: 7.438rem; height: 1.524rem"
+            src="./assets/ROS_Got_this.svg"
+            alt="ROS is saying, We got this!"
+            style="height: 5.875rem; width: 10.375rem"
           />
         </div>
       </a>
-      <div class="" style="display: flex; justify-content: center">
-        <img
-          src="./assets/ROS_Got_this.svg"
-          alt="ROS is saying, We got this!"
-          style="height: 5.875rem; width: 10.375rem"
-        />
-      </div>
       <div
         class=""
         style="
@@ -102,7 +101,7 @@
             title="ROS Vendor Form"
             target="_blank"
             rel="noopener noreferrer"
-            style="text-decoration: none; color: inherit;"
+            style="text-decoration: none; color: inherit"
           >
             <div
               style="
