--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         justify-content: space-between;
       "
     >
+      <div style=" display: flex;
+          justify-content: center;" >
       <div
         class="logo"
         style="
@@ -50,6 +52,7 @@
           style="width: 7.438rem; height: 1.524rem"
         />
       </div>
+      </div>
       <a
         href="https://info.republicofsabjiwala.com"
         title="Republic of Sabjiwala"
@@ -61,7 +64,7 @@
           <img
             src="./assets/ROS_Got_this.svg"
             alt="ROS is saying, We got this!"
-            style="height: 5.875rem; width: 10.375rem"
+            style="height: 5.875rem; width: 10.375rem; transform: translateX(1.875rem);"
           />
         </div>
       </a>
