Add link to ROS Customers Form in index.html

--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
               Investors
             </p>
           </div>
+          <a
+            href="https://forms.gle/wihJFGsdpqRcEbLX9"
+            title="ROS Customers Form"
+            target="_blank"
+            rel="noopener noreferrer"
+            style="text-decoration: none; color: inherit"
+          >
           <div
             style="
               display: flex;
@@ -161,6 +168,7 @@
               Customers
             </p>
           </div>
+          </a>
         </div>
         <div
           style="
